5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_2425.log
== TEST (2019-03-28 10:28:21) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round (cons_medio,3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:28:41) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3)"km/l")
-- EXECUTION TIME:
0.127706
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 4
    print (round (cons_medio,3)"km/l")
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:29:00) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3 "km/l")
-- EXECUTION TIME:
0.181929
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 4
    print (round (cons_medio,3 "km/l")
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:29:43) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3 "km/l"))

-- EXECUTION TIME:
0.203459
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 4
    print (round (cons_medio,3 "km/l"))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:30:21) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3))(km/l)

-- EXECUTION TIME:
0.181083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 4, in <module>
    print (round (cons_medio,3))(km/l)
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:30:50) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3))("km/l")

-- EXECUTION TIME:
0.143067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 4, in <module>
    print (round (cons_medio,3))("km/l")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:32:20) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3)("km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round (cons_medio,3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:33:45) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3, "km/l"))

-- EXECUTION TIME:
0.227042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 4, in <module>
    print (round (cons_medio,3, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:34:03) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3), "km/l"))

-- EXECUTION TIME:
0.135678
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 4
    print (round (cons_medio,3), "km/l"))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:34:17) 
-- CODE:
Dist = float (input ("Digite a distancia percorrida:"))
comb = float (input ("Digite o cobustivel gasto:"))
cons_medio = (Dist/comb)
print (round (cons_medio,3), "km/l")

-- EXECUTION TIME:
0.147485
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
